@@ -23,6 +23,10 @@ PyKota NEWS :
 
     - 1.20beta :
     
+        - For urgent legal reasons, a "privacy" directive has been added 
+          to pykota.conf, to hide jobs' title, filename and options
+          in the history.
+          
         - Minor changes in the debian directory.
         
     - 1.20alpha27 : 
